layers required to store custom ETL libraries and code

--- a/master.yaml
+++ b/master.yaml
@@ -64,6 +64,11 @@ Resources:
       Parameters:
         pEmailforNotification: !Ref pEmailforNotification
 
+  HighLevelLayer:
+    Type: "AWS::CloudFormation::Stack"
+    Properties:
+      TemplateURL: ''
+
   MonitoringNObservability:
     Type: "AWS::CloudFormation::Stack"
     Properties:
